src/test/deca/context/invalid/created/binary_exp/op_comp/eq_boolean_float.deca
// Description :
//    test eq entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type boolean, float, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{
boolean a;
float b;
boolean c = a == b;
}
